Bug 151504 - Can't export data for parametrized query to a .csv file
Summary: Can't export data for parametrized query to a .csv file
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Migration/Import/Export (other bugs)
Version First Reported In: 2.9 beta1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.9
Assignee: Roman Shtemberko
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-10-29 10:44 UTC by Rüdiger Stuible
Modified: 2015-02-19 17:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rüdiger Stuible 2007-10-29 10:44:42 UTC
Version:           3.5.8 (using KDE KDE 3.5.8)
Installed from:    Ubuntu Packages
OS:                Linux

I can't export any query that uses criteria like [foo]. Clicking on the export button does do nothing at all. The dialoque stays open. If I leave out criteria from the query it is possible to export. Also these queries can't be printed and there is no print preview. I am using kexi with gnome desktop. Here is an example with correct SQL code that doesn't export:

SELECT repertoire.titel, repertoire.gesang, repertoire.tonart, repertoire.akkustikgitarre FROM alle_auftritte, repertoire, alle_setlisten WHERE (repertoire.id = alle_setlisten.titel_id AND alle_auftritte.id = alle_setlisten.auftritt_id) AND (alle_auftritte.datum = [Wann? (xx.yy.zz)] AND alle_auftritte.ort = [Wo?])
Comment 1 Jarosław Staniek 2008-01-25 21:22:20 UTC
Similar to http://bugs.kde.org/show_bug.cgi?id=152810
Comment 2 Roman Shtemberko 2015-02-19 17:07:15 UTC
Git commit d150b0b5673e877da1a99ebcbf088ccbc8c67a3b by Roman Shtemberko.
Committed on 19/02/2015 at 16:49.
Pushed by rshtemberko into branch 'calligra/2.9'.

Export data for parametrized query to a .csv file.
REVIEW:121443

M  +7    -4    kexi/core/KexiMainWindowIface.h
M  +6    -1    kexi/core/KexiView.cpp
M  +4    -1    kexi/core/KexiView.h
M  +35   -20   kexi/main/KexiMainWindow.cpp
M  +7    -4    kexi/main/KexiMainWindow.h
M  +12   -7    kexi/plugins/importexport/csv/kexicsvexport.cpp
M  +13   -6    kexi/plugins/queries/kexiqueryview.cpp
M  +3    -0    kexi/plugins/queries/kexiqueryview.h

http://commits.kde.org/calligra/d150b0b5673e877da1a99ebcbf088ccbc8c67a3b