Export data for parametrized query to a .csv file.

BUG:151504
REVIEW:121443